[package]
name = "radrad"
version = "0.1.0"
authors = ["m-ceta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3u8-rs = "1.0.6"
reqwest = { version="0.11", features=["blocking", "json"] }
eyre = "0.6"
quick-xml = "0.22"
regex = "0.1"
base64 = "0.13"
signal-hook = "0.3"
