[package]
name = "radrad"
version = "0.1.0"
authors = ["m-ceta"]
edition = "2018"


[dependencies]
m3u8-rs = "1.0.6"
reqwest = { version="0.11", default-features = false, features=["blocking", "json", "rustls-tls"] }
eyre = "0.6"
quick-xml = "0.22"
regex = "0.1"
base64 = "0.13"
signal-hook = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
actix-web = "3.0"
